# USF-Hackabull

./: .gitignore  LICENSE  README.md
backend/: README.md  main.py  pyproject.toml  requirements.in  requirements.txt
backend/api/: router.py
backend/api/endpoints/: users.py
backend/app/: main.py
backend/app/firebase_test/: main.py  test_firebase.py
backend/core/: firebase_config.py
backend/models/: team.py  user.py
backend/routes/: auth.py
front-end/: .prettierignore  .prettierrc.js  eslint.config.mjs  package-lock.json  package.json
